# proxy-use-cases

./: AGENTS.md  CONTRIBUTING.md  README.en.md  README.md  SECURITY.md  catalog.json  catalog.schema.json  llms.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
contracts/: README.md  proxy-execution.schema.json
contracts/fixtures/: execution-browser-success.json  execution-success.json  execution-timeout.json
docs/: AI-START-HERE.md  B2B-MATURITY-MODEL.md  B2B-REFERENCE-ARCHITECTURE.md  B2B-SLO-AND-RUNBOOK.md  BROWSER-ROUTE-AND-REPLAY.md  CHOOSE-A-SOLUTION.md  CLIENT-START-HERE.md  CONNECTION-STRATEGIES-AND-ROTATION.md  CONTENT-ROADMAP.md  EXECUTION-CONTRACT.md  GITHUB-GROWTH-PLAN.md  LOCAL-REAL-PROXY-ACCEPTANCE.md  PROXY-MARKET-API-REFERENCE.md
integrations/node-production/: .env.browser.example  .env.example  .gitignore  README.md  acceptance.example.json  package-lock.json  package.json
integrations/node-production/scripts/: local-acceptance.mjs
integrations/node-production/src/: acceptance.js  browser-cli.js  browser.d.ts  browser.js  cli.js  client.d.ts  client.js  execution.js  job-store.js  rotation-cli.js  rotation.d.ts  rotation.js
integrations/node-production/test/: acceptance.test.js  browser.test.js  client.test.js  execution.test.js  rotation.test.js
integrations/proxy-market-api/: .env.example  .gitignore  README.md  pyproject.toml
integrations/proxy-market-api/src/proxy_market_api/: __init__.py  client.py
integrations/proxy-market-api/tests/: test_client.py
integrations/python-production/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
integrations/python-production/src/proxy_b2b_client/: __init__.py  cli.py  client.py  config.py  execution.py  redaction.py
integrations/python-production/tests/: test_cli.py  test_client.py  test_config.py  test_execution_contract.py  test_redaction.py
labs/session-strategy/: README.md  pyproject.toml
labs/session-strategy/examples/: workload.jsonl
labs/session-strategy/src/session_strategy/: __init__.py  analysis.py  cli.py
labs/session-strategy/tests/: test_analysis.py
quickstarts/curl/: .env.example  README.md  check_proxy.sh
scripts/: validate_catalog.mjs  validate_execution_contract.mjs  validate_markdown_links.mjs
tests/shell/: test_curl_quickstart.sh
tests/shell/fixtures/: fake_curl.sh
tools/proxy-diagnostics/: README.md  pyproject.toml
tools/proxy-diagnostics/src/proxy_diagnostics/: __init__.py  cli.py  probe.py  redaction.py
tools/proxy-diagnostics/tests/: test_probe.py
tools/proxy-healthcheck/: .env.example  .gitignore  README.md  healthcheck.example.json  pyproject.toml
tools/proxy-healthcheck/src/proxy_healthcheck/: __init__.py  cli.py  config.py  engine.py  models.py  redaction.py  report.schema.json  transport.py
tools/proxy-healthcheck/tests/: test_config.py  test_healthcheck.py  test_transport.py
tools/proxybench/: .gitignore  README.md  benchmark.example.json  pyproject.toml
tools/proxybench/src/proxybench/: __init__.py  benchmark.schema.json  cli.py  engine.py  result.schema.json
tools/proxybench/tests/: test_cli.py  test_healthcheck_contract.py  test_proxybench.py
use-cases/regional-web-qa/: .env.example  .gitignore  README.en.md  README.md  package-lock.json  package.json
use-cases/regional-web-qa/src/: cli.mjs  config.mjs  env.mjs  exit-codes.mjs  redaction.mjs  report.mjs
use-cases/regional-web-qa/tests/: config.test.mjs  redaction.test.mjs  report.test.mjs
