[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-market-control-plane"
version = "0.1.0"
description = "Defensive Python client for the public Proxy.Market control-plane API"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
