[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-b2b-client"
version = "0.1.0"
description = "Provider-neutral production HTTP client for B2B proxy workloads"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.28.0,<1.0",
]

[project.optional-dependencies]
socks = ["httpx[socks]>=0.28.0,<1.0"]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
proxy-b2b = "proxy_b2b_client.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
