[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "andrey-proxy-sdk"
version = "0.2.0"
description = "Provider-neutral Python SDK for production B2B proxy workloads"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Andrey Malyshev" }]
license = { text = "MIT" }
keywords = ["proxy", "b2b", "httpx", "web-data", "sdk"]
dependencies = [
  "httpx>=0.28.0,<1.0",
]

[project.optional-dependencies]
socks = ["httpx[socks]>=0.28.0,<1.0"]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
proxy-b2b = "proxy_b2b_client.cli:main"
andrey-proxy = "proxy_b2b_client.cli:main"

[project.urls]
Documentation = "https://github.com/smuuuzik-tech/proxy-use-cases/tree/main/integrations/python-production"
Source = "https://github.com/smuuuzik-tech/proxy-use-cases"
Issues = "https://github.com/smuuuzik-tech/proxy-use-cases/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
