[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-session-strategy"
version = "0.1.0"
description = "Analyze sticky and rotating proxy session outcomes from workload logs"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Proxy session strategy contributors" }]
dependencies = []

[project.scripts]
proxy-session-analyzer = "session_strategy.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
