[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-diagnostics"
version = "0.1.0"
description = "Provider-neutral diagnostics for proxy authentication, DNS, TLS and timeout failures"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Proxy diagnostics contributors" }]
dependencies = []

[project.scripts]
proxy-diagnostics = "proxy_diagnostics.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
