[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy-healthcheck"
version = "0.1.0"
description = "Provider-neutral proxy pool health checks for B2B operations and CI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Proxy Healthcheck contributors" }]
keywords = ["proxy", "healthcheck", "operations", "observability", "ci"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.scripts]
proxy-healthcheck = "proxy_healthcheck.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["proxy_healthcheck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
