[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "andrey-proxybench"
version = "0.1.0"
description = "Provider-neutral comparison of Proxy Healthcheck reports for B2B decisions"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Andrey Malyshev" }]
license = { text = "MIT" }
keywords = ["proxy", "benchmark", "slo", "cost", "b2b"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.scripts]
proxybench = "proxybench.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
proxybench = ["*.schema.json"]
